Major Changes in the code